Fixes filename on ZipUtility